data/derived/fa15/progs/unify/prog0435.ml.out
Characters 82-87:
  else mulByDigit ((i-1) bigAdd l l);;
                   ^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
